# pocket-law

./: README.md  pyproject.toml
app/: app.py  settings.py
app/core/: database.py  enums.py  events.py  log_config.py  repository.py  schemas.py  security.py
app/core/exception/: base.py  error_codes.py
app/orders/: enums.py  exceptions.py  models.py  routes.py  schemas.py  serializer.py
app/orders/repositories/: order.py
app/services/mail_service/: mail_service.py
app/services/ocr_service/: base.py  google_ocr.py
app/services/s3_service/: base.py  exceptions.py  service.py
app/services/sms_service/: exceptions.py  sms_service.py
app/users/: auth.py  enums.py  exceptions.py  models.py  routes.py  schemas.py  utils.py
app/users/repositories/: exceptions.py  user.py
tests/: conftest.py
tests/users/: conftest.py  factories.py  test_profile.py  test_users.py
tests/users/auth/: test_email_confirm.py  test_signin.py  test_signup.py
