[tool.poetry]
name = "pocket-law"
version = "0.1.0"
description = ""
authors = ["Anton Galiullin <a.galiulin@napoleonit.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pytest = "^7.1.2"
fastapi-jwt-auth = "^0.5.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
motor = "^3.0.0"
structlog = "^21.5.0"
passlib = "^1.7.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
