[tool.poetry]
name = "pocket-law"
version = "0.1.0"
description = ""
authors = ["Anton Galiullin <a.galiulin@napoleonit.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pytest = "^7.1.2"
fastapi-jwt-auth = "^0.5.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.9.0"}
motor = "^3.0.0"
structlog = "^21.5.0"
passlib = "^1.7.4"
gunicorn = "^20.1.0"
requests = "^2.27.1"
bcrypt = "^3.2.2"
aiobotocore = "^2.3.2"
python-multipart = "^0.0.5"
httpx = "^0.23.0"
asgi-lifespan = "^1.0.1"
factory-boy = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
